src/objects/Award_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Substance_Abuse_IN__c</fullName>
        <label>Substance Abuse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_NIH__c</fullName>
        <label>Substance Abuse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_V__c</fullName>
        <formula>Substance_Abuse_IN__c  +  Substance_Abuse_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Substance Abuse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teen_Pregnancy_Teen_Parenting_IN__c</fullName>
        <label>Teen Pregnancy/Teen Parenting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teen_Pregnancy_Teen_Parenting_NIH__c</fullName>
        <label>Teen Pregnancy/Teen Parenting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teen_Pregnancy_Teen_Parenting_V__c</fullName>
        <formula>Teen_Pregnancy_Teen_Parenting_IN__c  +  Teen_Pregnancy_Teen_Parenting_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teen Pregnancy/Teen Parenting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Terminally_Ill_IN__c</fullName>
        <label>Terminally Ill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminally_Ill_NIH__c</fullName>
        <label>Terminally Ill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminally_Ill_V__c</fullName>
        <formula>Terminally_Ill_IN__c  +  Terminally_Ill_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terminally Ill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminally_Ill__c</fullName>
        <label>Terminally Ill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timely_Submission__c</fullName>
        <description>If FFR has been submitted before or on the due date, then Update “on time”


If FFR has extended due date and FFR has been submitted before or on the extended due date, then Update “on time”


If FFR is submitted after due date and/or extended due date, then Update “late”</description>
        <formula>IF(Date_report_submitted__c&lt;=Due_Date__c&amp;&amp;ISNULL(Extended_Due_Date__c),&apos;On time&apos;,(IF(NOT(ISNULL(Extended_Due_Date__c))&amp;&amp;Date_report_submitted__c&lt;=Extended_Due_Date__c,&apos;On time&apos;,&apos;Late&apos;)))</formula>
        <label>Timely Submission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_of_Authorized_Certifying_official__c</fullName>
        <label>Title of Authorized Certifying official</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Fed_Funds_authorized_Cumulative__c</fullName>
        <label>Total Fed Funds authorized-Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fed_Funds_authorized_This_Period__c</fullName>
        <label>Total Fed Funds authorized-This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Funds_authorized__c</fullName>
        <label>Total Federal Funds authorized-Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Share_Previous__c</fullName>
        <description>bug #3453</description>
        <label>Total Federal Share – Previous</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Share_This_Period__c</fullName>
        <description>bug #3453</description>
        <label>Total Federal Share – This Period</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Non_Stipend_Volunteers__c</fullName>
        <label># of Non-Stipend Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Recipient_Share_Required_c__c</fullName>
        <label>Total Recipient Share Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Recipient_share_req_Cumulative__c</fullName>
        <label>Total Share Required – Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recipient_share_req_ThisPeriod__c</fullName>
        <label>Total Share Required – This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recipient_share_required__c</fullName>
        <label>Total Share Required – Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Volunteer_Hours_this_budget_period__c</fullName>
        <label>Total Volunteer Hours this budget period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_federal_program_income_earned_no__c</fullName>
        <inlineHelpText>Total federal program income earned (not reported above)</inlineHelpText>
        <label>Total Federal Program Income Earned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_federal_share__c</fullName>
        <formula>Total_Federal_Funds_authorized__c + Federal_Share_of_unliquidated_obligation__c  +  Federal_Share_of_expenditures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Federal Share – Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_number_of_Immigrants_served__c</fullName>
        <label>Number of Immigrants Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_Volunteers__c</fullName>
        <label>Total number of Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_Volunteers_non_federally__c</fullName>
        <label># of Volunteers Non-Federally Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_Volunteers_serving_in_in__c</fullName>
        <label># of Volunteers. in In-Home Placements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_active_Military_members__c</fullName>
        <label># of Active Military Mbrs. Serving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_active_Military_served__c</fullName>
        <label>Total number of active Military served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_mentored__c</fullName>
        <label>Total number of children mentored</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_of_National_Gua__c</fullName>
        <label>Children of Ntl. Guard Reservists Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_of_active_milit__c</fullName>
        <label>Children of Active Mil. Members Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_of_prisoners_se__c</fullName>
        <label>Children of Prisoners Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_youth_served__c</fullName>
        <label>Total number of children/youth served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_clients_served__c</fullName>
        <label>Total number of clients served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_disaster_services_V__c</fullName>
        <label>Total # of Disaster Services Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_disaster_services_statio__c</fullName>
        <label>Total # of Disaster Service Stations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_faith_based_Stations_V__c</fullName>
        <label>Total Number of Faith-Based Stations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_family_members_of_active__c</fullName>
        <label>Family Members of Active Mil. Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_hours_served_federally_f__c</fullName>
        <label># of Hours Served Federally Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_hours_served_non_federal__c</fullName>
        <label># of Hours Served Non-Federally Funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_seniors_on_waiting_list__c</fullName>
        <label># of Seniors on Waiting List to be Vols.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_veterans_served__c</fullName>
        <label>Total number of veterans served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_volunteers_with_family_m__c</fullName>
        <label># Vols. with Fam. Mbrs. Actively Serving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Volunteers_federally_funded__c</fullName>
        <label>Total # of Volunteers federally funded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_faith_based_Volunteer__c</fullName>
        <label>Total Number of Faith-Based Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transportation_problems__c</fullName>
        <label>Transportation problems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unexpended_program_income__c</fullName>
        <formula>Total_federal_program_income_earned_no__c + Program_income_expended_in_accordance_wi__c  +  Program_income_expended_in_accordance_w__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unexpended program income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated_Bal_Fed_Funds_This_Period__c</fullName>
        <description>bug #3453</description>
        <label>Unobligated Bal. Fed Funds – This Period</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated_Bal_of_Fed_Funds_Previous__c</fullName>
        <description>bug #3453</description>
        <label>Unobligated Bal. of Fed Funds – Previous</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated_Fed_Funds_Rate__c</fullName>
        <label>Unobligated Fed Funds Rate</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unobligated_balance_of_federal_funds__c</fullName>
        <formula>Total_Federal_Funds_authorized__c  -  Federal_Share_of_expenditures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unobligated Bal. Fed Funds – Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated_balance_of_federal_funds_c__c</fullName>
        <formula>Total_Fed_Funds_authorized_Cumulative__c  -  Total_Recipient_share_req_Cumulative__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unobligated_balance_of_federal_funds__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated_funds__c</fullName>
        <label>Unobligated funds</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_on_other_federal_activities__c</fullName>
        <inlineHelpText>Does the grantee request the use of the equipment on other federally supported activities?</inlineHelpText>
        <label>Use on other federal activities?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veterans_Military_Families_of_clients__c</fullName>
        <label>Receiving Veteran/Military Family Svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veterans_family_members_of_clients__c</fullName>
        <label>Vets’ Fam Mbrs that Received Assistance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veterans_family_members_that_received_a__c</fullName>
        <label>Veterans’ family members that received a</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veterans_of_clients__c</fullName>
        <label>Veterans that received assistance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veterans_that_received_assistance__c</fullName>
        <label>Veterans that received assistance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vets_military_fam_mbrs_providing_service__c</fullName>
        <inlineHelpText>Number of veterans &amp; military family members engaged in providing services</inlineHelpText>
        <label># of Vet/mil fam mbrs providing services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visually_Impaired_IN__c</fullName>
        <label>Visually Impaired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visually_Impaired_NIH__c</fullName>
        <label>Visually Impaired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visually_Impaired_V__c</fullName>
        <formula>Visually_Impaired_IN__c  +  Visually_Impaired_NIH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visually Impaired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visually_Impaired__c</fullName>
        <label>Visually Impaired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteers_Separated__c</fullName>
        <label>Volunteers Separated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiver_Type__c</fullName>
        <label>Waiver Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>White__c</fullName>
        <label>White</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withdraw_Justification__c</fullName>
        <label>Rework Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Recipient_Access_Identifying__c</fullName>
        <label>Your Recipient Access/Identifying #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip1__c</fullName>
        <description>DDP</description>
        <formula>Award__r.Application_ID__r.Project__r.Organization__r.Zip1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city1__c</fullName>
        <description>DDP</description>
        <formula>Award__r.Application_ID__r.Project__r.Organization__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>city1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>no_of_volunteers__c</fullName>
        <label># of Volunteers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Federal_Funds_Expended_to_Date__c</fullName>
        <formula>Federal_Share_of_expenditures_C__c  /  Total_Fed_Funds_authorized_Cumulative__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Federal Funds Expended to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Federal_Funds_matched_to_date__c</fullName>
        <description>As per #870</description>
        <formula>Recipient_share_of_exp_Cumulative__c  / ( Recipient_share_of_exp_Cumulative__c  +  Federal_Share_of_expenditures_C__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Federal Funds matched to date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Unobligated_Federal_Fund__c</fullName>
        <formula>Unobligated_balance_of_federal_funds__c  /  Total_Fed_Funds_authorized_Cumulative__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Unobligated Federal Fund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Disaste__c</fullName>
        <label>add&apos;l activities comp– Disaster svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Econom__c</fullName>
        <label>add’l activities comp– Economic Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Edu__c</fullName>
        <label>add’l activities comp– Edu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Enviro__c</fullName>
        <label>add&apos;l activities comp–Enviro Stewardship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Health__c</fullName>
        <label>add’l activities comp– Healthy Futures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Vetera__c</fullName>
        <label>add’l activities comp– Vet &amp; Mil Fams</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Disaster_Servi__c</fullName>
        <label>add&apos;l svcs offered - Disaster Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Economic_Opp__c</fullName>
        <label>add’l svcs offered– Economic Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Edu__c</fullName>
        <label>add’l svcs offered– Edu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Enviro_Steward__c</fullName>
        <label>add’l svcs offered– Enviro Stewardship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Healthy_Future__c</fullName>
        <label>add’l svcs offered– Healthy Futures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Vets_Militar__c</fullName>
        <label>add’l svcs offered– Vet &amp; Military Fams</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_federal_funds_unobligated_Federal__c</fullName>
        <label>Federal - % Federal Funds Unobligated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_federal_funds_unobligated__c</fullName>
        <label>% of federal funds unobligated:Recipient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_funds_expended_to_date_Federal__c</fullName>
        <label>Federal - % Funds Expended to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_funds_expended_to_date__c</fullName>
        <label>Recipient - % Funds Expended to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_match_required__c</fullName>
        <formula>(Total_Recipient_share_required__c  / ( Total_Recipient_share_required__c +  Total_Federal_Funds_authorized__c ))*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of match</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_share_of_total_expenditures__c</fullName>
        <label>Recipient - % Share of Total Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_share_of_total_expenditures_federal__c</fullName>
        <label>Federal - % Share of Total Expenditure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>states__c</fullName>
        <description>DDP</description>
        <formula>Text(Award__r.Application_ID__r.Project__r.Organization__r.States__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>states</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trained_by_capacity_building_scvs__c</fullName>
        <inlineHelpText># of staff &amp; volunteers trained as a result of capacity-building scvs</inlineHelpText>
        <label># trained by capacity-building svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Award Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Award__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Due_Date__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>19vshdc006</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Award__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Org_legal_name__c</columns>
        <columns>Grant__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.Progress_Reports</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Progress Report</label>
    </listViews>
    <listViews>
        <fullName>FFR</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Award__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Organization_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.Federal_Financial_Reports</value>
        </filters>
        <filters>
            <field>Organization_Name__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <label>FFR</label>
    </listViews>
    <listViews>
        <fullName>FGP_FGPE_Progress_Report_Supplement</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Grant_num__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Reporting_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.FGP_FGPF_Progress_Report_Supplement</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.RSVP_Progress_Report_Supplement</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.Senior_Corps_Progress_Report_Supplements</value>
        </filters>
        <label>Test Suite 3173</label>
    </listViews>
    <listViews>
        <fullName>My_Award_Reports</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Reporting_Start_Date__c</columns>
        <columns>Reporting_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Award Reports</label>
    </listViews>
    <listViews>
        <fullName>Points_of_Light_Foundation</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org_legal_name__c</field>
            <operation>equals</operation>
            <value>Points of Light Foundation</value>
        </filters>
        <label>Points of Light Foundation</label>
    </listViews>
    <listViews>
        <fullName>Returned_for_Rework</fullName>
        <columns>NAME</columns>
        <columns>Award__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Returned for Re-work</value>
        </filters>
        <label>Returned for Rework</label>
    </listViews>
    <listViews>
        <fullName>Senior_Corps_Progress_Report_Supplements</fullName>
        <columns>NAME</columns>
        <columns>Organization_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Due_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.FGP_FGPF_Progress_Report_Supplement,Award_Reporting__c.Senior_Corps_Progress_Report_Supplements</value>
        </filters>
        <label>Senior Corps Progress Report Supplements</label>
    </listViews>
    <listViews>
        <fullName>VISTA_Progress_Report_Supplements</fullName>
        <columns>NAME</columns>
        <columns>Organization_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Award_Reporting__c.VISTA_Progress_Report_Supplements</value>
        </filters>
        <label>VISTA Progress Report Supplements</label>
    </listViews>
    <listViews>
        <fullName>test_Award_Reporting</fullName>
        <filterScope>Everything</filterScope>
        <label>test</label>
    </listViews>
    <nameField>
        <displayFormat>Award Reporting-{000}</displayFormat>
        <label>Award Reporting Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Reporting</pluralLabel>
    <recordTypes>
        <fullName>Equipment_Inventory</fullName>
        <active>true</active>
        <description>Equipment Inventory</description>
        <label>Equipment Inventory</label>
    </recordTypes>
    <recordTypes>
        <fullName>FFR_Submitted_Status</fullName>
        <active>true</active>
        <label>FFR Submitted Status</label>
    </recordTypes>
    <recordTypes>
        <fullName>FGP_FGPF_Progress_Report_Supplement</fullName>
        <active>true</active>
        <description>Senior Corps Foster Grandparents Program</description>
        <label>FGP/FGPF Progress Report Supplement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Federal_Financial_Reports</fullName>
        <active>true</active>
        <description>Federal Financial Reporting</description>
        <label>Federal Financial Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_of_Unused_or_Residual_Supplies</fullName>
        <active>true</active>
        <description>Inventory of Unused or Residual Supplies</description>
        <label>Inventory of Unused or Residual Supplies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Progress_Reports</fullName>
        <active>true</active>
        <description>Progress Reports</description>
        <label>Progress Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSVP_Progress_Report_Supplement</fullName>
        <active>true</active>
        <description>Senior Corps Retired and Senior Volunteer Program</description>
        <label>RSVP Progress Report Supplement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Senior_Corps_Progress_Report_Supplements</fullName>
        <active>true</active>
        <description>Senior Corps Senior Companions</description>
        <label>SCP/SCPF Progress Report Supplement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subgrantee_Certification</fullName>
        <active>true</active>
        <description>Subgrantee Certification</description>
        <label>Subgrantee Certification</label>
    </recordTypes>
</CustomObject>